<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.eyeque.eyeque.LoginActivity">

    <WebView
        android:id="@+id/bannerWebView"
        android:layout_width="fill_parent"
        android:layout_height="203dp"
        android:scaleType="fitXY">
    </WebView>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/forgotPaswordTextString"
                android:id="@+id/forgotPasswordTextView"
                android:onClick="onClick"
                android:clickable="true"
                android:layout_marginTop="16dp"
                android:textColor="#046EEA"
                android:textSize="15dp"/>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@android:color/holo_blue_dark"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/facebookGoogleTextString"
                android:id="@+id/facebookGoogleTextView"
                android:textColor="#046EEA"
                android:textSize="15dp"/>

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <ImageButton
                    android:id="@+id/FacebookButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:padding="25dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" >
                </ImageButton>
                <ImageButton
                    android:id="@+id/GoogleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:padding="25dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" >
                </ImageButton>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/regText"
                android:id="@+id/regTextView"
                android:textColor="#046EEA"
                android:textSize="15dp"/>

            <Button
                android:id="@+id/email_reg_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:background="@android:color/holo_blue_dark"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text=""
                android:id="@+id/versionTextView"
                android:textColor="#046EEA"
                android:textSize="15dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
