<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.eyeque.eyeque.SubscriptionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop = "15dp"
        android:text="@string/subscriptionHeaderTextString"
        android:id="@+id/subscriptionHeaderTextView"
        android:textColor="@color/background_material_dark"
        android:textSize="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop = "15dp"
        android:id="@+id/nameHeaderDivView"
        android:layout_below="@+id/accountHeaderTextView"
        android:background="@android:color/darker_gray"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/loading_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/account_form"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/accountLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/subscriptionStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subscriptionStatusText"
                    android:inputType="text"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:maxLines="1"
                    android:imeOptions="actionDone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/subscriptionExpiration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subscriptionExpirationDate"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:maxLines="1"
                    android:imeOptions="actionDone" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/subscription_buy_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/buySubscriptionText"
                android:textStyle="bold"
                android:background="@android:color/holo_blue_dark"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

